--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 		<link href = "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="" crossorigin="anonymous">
         <title>oasis.io</title>
         <style>
-        	
+        	body{
+        		background-color: #282C34;
+        color: #fff;
+        	}
 #header{
     display: flex;
     align-items: center;
@@ -97,6 +100,19 @@ h6{
   background-color: #ffe5ec;
 }
 
+.container {
+        margin-top: 50px;
+      }
+      .form-group label {
+        color: #fff;
+      }
+      #result {
+        background-color: #343A40;
+        color: #fff;
+        padding: 10px;
+        margin-top: 20px;
+      }
+
 </style>
 </head>
 <body class="bg-dark">
@@ -117,6 +133,24 @@ h6{
             <i id="bar" class="fa fa-outdent out"></i>
         </div>
         </section>
+
+<div class="container">
+        	<h1>Calculator</h1>
+        	<br>
+      <form>
+        <div class="form-group">
+          <label for="eps">Enter value for EPS:</label>
+          <input type="text" class="form-control" id="eps">
+        </div><br>
+        <div class="form-group">
+          <label for="bvps">Enter value for BVPS:</label>
+          <input type="text" class="form-control" id="bvps">
+        </div><br>
+        <button type="button" class="btn btn-primary" onclick="calculate()">Calculate</button>
+        <div id="result"></div>
+      </form>
+    </div>
+    <br><br>
 
         <section class="bg-dark text-light p-5 text-center text-sm-start">
 			<div class="container">
@@ -140,7 +174,14 @@ h6{
        
     </div>
   </section>
-  
+  <script>
+      function calculate() {
+        let eps = parseFloat(document.getElementById("eps").value);
+        let bvps = parseFloat(document.getElementById("bvps").value);
+        let result = Math.sqrt((22.5*(eps)*(bvps)));
+        let roundedResult = Math.round(result);
+        document.getElementById("result").innerHTML = "<strong>Value is:</strong> " + roundedResult + " Rs." }
+ </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   
  </body>
